--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Document</title>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Font Awesome Icons-->
+    <script src="https://kit.fontawesome.com/efef0daf69.js" crossorigin="anonymous"></script>
+    <!-- Font Awesone cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="login-container">
+        <img src="ImageSrc/Org Logo.png" style="width: 350px;height: 60px; margin-left: 20px; margin-top: 20px;">
+        <img src="ImageSrc/Website-Logo.png" style="width: 350px;height: 110px; display: block; margin: 0 auto; margin-top: 80px;">
+        <p style="color: #00290F;">UC-PNC Senior High School Web-Calendar</p><br><br>
+        <form action="#" method="post">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="submit" value="Login">
+        </form>
+        <p>Don't have an account? <a href="#">Sign up</a></p>
+    </div>
+</body>
 </html>
