--- a/Sign-up.html
+++ b/Sign-up.html
@@ -11,21 +11,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Log-In</title>
+    <title>Sign-up</title>
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Sign-up.css">
 </head>
 <body>
     <div class="login-container">
-        <img src="ImageSrc/Org Logo.png" style="width: 350px;height: 60px; margin-left: 20px; margin-top: 20px;">
-        <img src="ImageSrc/Website-Logo.png" style="width: 350px;height: 110px; display: block; margin: 0 auto; margin-top: 80px;">
-        <p style="color: #00290F;">UC-PNC Senior High School Web-Calendar</p><br><br>
+        <h1 style="color: #00290F;" style>SIGN-UP</h1><br><br>
         <form action="#" method="post">
-            <input type="text" name="username" placeholder="Username" required>
+            <label>Full Name (First Name, M.I., Last Name)</label><br>
+            <input type="text" name="Fullname" placeholder="Fullname" required>
+            <label>Full Name (First Name, M.I., Last Name)</label><br>
+            <input type="text" name="StudentID" placeholder="StudentID" required>
+            <label>Full Name (First Name, M.I., Last Name)</label><br>
+            <input type="text" name="Email" placeholder="username@gmail.com" required>
+            <label>Full Name (First Name, M.I., Last Name)</label><br>
             <input type="password" name="password" placeholder="Password" required>
-            <input type="submit" value="LOGIN">
+            <input type="submit" value="SIGN-UP">
         </form>
-        <p style="font-size: 17px;">Don't have an account? <a href="#">Sign up</a></p>
     </div>
 </body>
 </html>
