Update the index.html $ Sign-up.html and their CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="ImageSrc/OnlyOrgLogo.png" type="image/x-icon">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Font Awesome Icons-->
@@ -11,13 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Log-In</title>
+    <title>𝗟𝗢𝗚-𝗜𝗡</title>
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="login-container">
-        <img src="ImageSrc/Org Logo.png" style="width: 350px;height: 60px; margin-left: 20px; margin-top: 20px;">
+    <div class="login-container">   
+        <img src="ImageSrc/Org Logo.png" style="width: 350px;height: 60px; margin-left: -100px; margin-top: 20px;">
         <img src="ImageSrc/Website-Logo.png" style="width: 350px;height: 110px; display: block; margin: 0 auto; margin-top: 80px;">
         <p style="color: #00290F;">UC-PNC Senior High School Web-Calendar</p><br><br>
         <form action="#" method="post">
@@ -25,7 +26,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="LOGIN">
         </form>
-        <p style="font-size: 17px;">Don't have an account? <a href="#">Sign up</a></p>
+        <p style="font-size: 17px;">Don't have an account? <a href="Sign-up.html"><u>Sign up</u></a></p>
     </div>
 </body>
 </html>
