--- a/Sign-up.html
+++ b/Sign-up.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="ImageSrc/OnlyOrgLogo.png" type="image/x-icon">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Font Awesome Icons-->
@@ -11,22 +12,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Sign-up</title>
+    <title>𝗦𝗜𝗚𝗡-𝗨𝗣</title>
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
     <link rel="stylesheet" href="Sign-up.css">
 </head>
 <body>
-    <div class="login-container">
-        <h1 style="color: #00290F;" style>SIGN-UP</h1><br><br>
+    <div class="sign-up-container">
+        <a href="index.html"><i id="back-arrow" class="fa-solid fa-arrow-left"></i></a>
+        <br>
+        <h1 style="color: #00290F; margin-left: -145px; font-weight: 500;">SIGN-UP</h1><br><br>
         <form action="#" method="post">
-            <label>Full Name (First Name, M.I., Last Name)</label><br>
-            <input type="text" name="Fullname" placeholder="Fullname" required>
-            <label>Full Name (First Name, M.I., Last Name)</label><br>
-            <input type="text" name="StudentID" placeholder="StudentID" required>
-            <label>Full Name (First Name, M.I., Last Name)</label><br>
-            <input type="text" name="Email" placeholder="username@gmail.com" required>
-            <label>Full Name (First Name, M.I., Last Name)</label><br>
-            <input type="password" name="password" placeholder="Password" required>
+            <label style="color: #00290F; margin-left: -60px;">Full Name (First Name, M.I., Last Name)</label><br>
+            <input type="text" name="Fullname" required><br>
+            <label style="color: #00290F; margin-left: -295px;">Student ID</label><br>
+            <input type="text" name="StudentID" required><br>
+            <label style="color: #00290F; margin-left: -340px;">Email</label><br>
+            <input type="text" name="Email"required><br>
+            <label style="color: #00290F; margin-left: -302px;">Password</label><br>
+            <input type="password" name="password" required>
             <input type="submit" value="SIGN-UP">
         </form>
     </div>
