--- a/userHomePage.html
+++ b/userHomePage.html
@@ -26,7 +26,7 @@
 
                 <ul class="right hide-on-med-and-down" style="margin-right: 90px;">
                     <li>
-                        <a href="#scrollspy-About" style="color: #00290F;">About Us
+                        <a href="#About" style="color: #00290F;">About Us
                             <i class="fa-solid fa-info fa-2xl left" style="color: #00290F;"></i>
                         </a>
                     </li>
