--- a/adminHomePage.html
+++ b/adminHomePage.html
@@ -158,13 +158,14 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="adminHomePage.js"></script>
+        <script src="adminManagePage.js"></script>
 
         <script>
             $(document).ready(function(){
                 $('.sidenav').sidenav();
                 $('.tabs').tabs();
             });
+ 
         </script>
     </body>
 </html>
