Change hamburger menu, change Username Placeholder, Change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="ImageSrc/Website-Logo.png" style="width: 350px;height: 350px; display: block; margin: 0 auto; margin-top: 30px;">
             <p style="color: #00290F;">UC-PNC Senior High School Web-Calendar</p><br><br>
             <form id="login-form" action="#" method="post">
-                <input type="text" name="username" placeholder="Username" required>
+                <input type="text" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <input type="submit" value="LOGIN">
             </form>
