--- a/userHomePage.html
+++ b/userHomePage.html
@@ -41,7 +41,7 @@
 
         <!-- HAMBURGER MENU BAR -->
         <a style="color: #00290F;"  data-target="mobile-demo" class="sidenav-trigger">
-            <i class="fas fa-bars fixed-hamburger" style="color: #00290F;"></i>
+            <i class="fas fa-user fixed-hamburger" style="color: #00290F;"></i>
         </a>
         
         <!-- SIDE NAVIGATION -->
