--- a/userHomePage.html
+++ b/userHomePage.html
@@ -26,6 +26,11 @@
 
                 <ul class="right hide-on-med-and-down" style="margin-right: 90px;">
                     <li>
+                        <a id="notificationLink" href="#" style="color: #00290F;">Notifications <!-- Added id="notificationLink" here -->
+                            <i class="fa-solid fa-bell left"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#About" style="color: #00290F;">About Us
                             <i class="fa-solid fa-info fa-2xl left" style="color: #00290F;"></i>
                         </a>
@@ -38,6 +43,18 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- Modal Structure -->
+        <div id="notificationModal" class="modal">
+            <div class="modal-content">
+                <div id="notificationBar">
+                    <!-- Notification content will be displayed here -->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+            </div>
+        </div>
 
         <!-- HAMBURGER MENU BAR -->
         <a style="color: #00290F;"  data-target="mobile-demo" class="sidenav-trigger">
@@ -61,6 +78,7 @@
                 </li>
             </div>
         </ul>
+        
 
         <!-- HEADER SECTION -->
         <div id="Home-header">
@@ -72,9 +90,59 @@
 
         <!-- WEB CALENDAR SECTION-->
         <div id="WebCalendar">
-        
-        </div>
+            <!-- Manage Events Tab -->
+            <br><br><br><br><br><br><br><br>
+            <h1 id="calendarLabel">CALENDAR OF ACTIVITIES</h1>
+            <div class="container">
+                <div id="manage-events" class="container-calendar">
+                    <div class="row">
+                        <div class="col s12 m6">
+                            <div id="right">
+                                <h3 id="monthAndYear" style="width: 800px;"></h3>
+                                <div class="button-container-calendar" style="width: 800px;">
+                                    <button id="previous" onclick="previous()"> ‹ </button>
+                                    <button id="next" onclick="next()"> › </button>
+                                </div>
+                                <table style="width: 800px;"class="table-calendar" id="calendar" data-lang="en">
+                                    <thead id="thead-month"></thead>
+                                    <!-- Table body for displaying the calendar -->
+                                    <tbody id="calendar-body"></tbody>
+                                </table>
+                                <div class="footer-container-calendar">
+                                    <!-- Dropdowns to select a specific month and year -->
+                                    <select id="month" onchange="jump()">
+                                        <option value=0>Jan</option>
+                                        <option value=1>Feb</option>
+                                        <option value=2>Mar</option>
+                                        <option value=3>Apr</option>
+                                        <option value=4>May</option>
+                                        <option value=5>Jun</option>
+                                        <option value=6>Jul</option>
+                                        <option value=7>Aug</option>
+                                        <option value=8>Sep</option>
+                                        <option value=9>Oct</option>
+                                        <option value=10>Nov</option>
+                                        <option value=11>Dec</option>
+                                    </select>
+                                    <!-- Dropdown to select a specific year -->
+                                    <select id="year" onchange="jump()"></select>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="row">
+                            <div class="col s12" style="text-align: left;">
+                                <div id="event-display-panel">
+                                    <h6>Events for the Day</h6>
+                                    <div style="height: 10px; width: 200px; font-size: 10px;"></div>
+                                    <!-- Event display panel content -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- ABOUT SECTION -->
         <section class="scrollspy" id="About">
@@ -88,7 +156,7 @@
                 <div id="Cont-researchers">
                     <div class="row">
                         <div id="columnResearcher" class="col s12 m6 l3">
-                            <img src="ImageSrc/testingimage.png" alt="mem1" class="responsive-img" width="400" height="500">
+                            <img src="ImageSrc/PERALTA.png" alt="mem1" class="responsive-img" width="400" height="500">
                             <p id="researcherName" class="center">Peralta, James Dranzer T.</p>
                             <p id="researcherRole" class="center">TEAM LEADER</p>
                         </div>
@@ -171,21 +239,23 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="adminManagePage.js"></script>
+        <script src="userHomePage.js"></script> 
 
         <script>
-            // Scroll Spy
-            $(document).ready(function(){
-                $('.scrollspy').scrollSpy();
-            });
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('.modal');
+            var instances = M.Modal.init(elems, {});
+        });
 
-            // Side Navigation
-            document.addEventListener('DOMContentLoaded', function () {
-                var elemsSidenav = document.querySelectorAll('.sidenav');
-                var optionsSidenav = {
-                    edge: 'right'
-                };
-                var instancesSidenav = M.Sidenav.init(elemsSidenav, optionsSidenav);
+        // JavaScript to trigger the modal on clicking the notification bar
+        document.addEventListener('DOMContentLoaded', function() {
+            var notificationLink = document.querySelector('#notificationLink');
+            notificationLink.addEventListener('click', function() {
+                var instance = M.Modal.getInstance(document.getElementById('notificationModal'));
+                instance.open();
             });
-        </script>
+        });
+    </script>
 </body>
 </html>
