Update userHomePage and adminHomePage

--- a/userHomePage.html
+++ b/userHomePage.html
@@ -20,23 +20,23 @@
      <!-- NavBar -->
         <nav class="sticky-nav" style="font-family: 'PP Neue Montreal', sans-serif; font-weight: 500;">
             <div class="nav-wrapper" style="background-color: #EDEDED">
-                <a class="nav-logo" href="MainPage.html" style="margin-left: 30px;">
+                <a class="nav-logo" href="userHomePage.html" style="margin-left: 30px;">
                    <img src="ImageSrc/Website-Logo-NoSymbol.png" width="170px" height="80px" style="margin-top: -10px; margin-left: -40px;">
                 </a>
 
                 <ul class="right hide-on-med-and-down" style="margin-right: 90px;">
                     <li>
-                        <a id="notificationLink" href="#" style="color: #00290F;">Notifications <!-- Added id="notificationLink" here -->
+                        <a id="notificationLink" href="#" style="color: #00290F; padding-right: 30px; padding-left: 30px;">Notifications 
                             <i class="fa-solid fa-bell left"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#About" style="color: #00290F;">About Us
+                        <a href="#About" style="color: #00290F; padding-right: 30px; padding-left: 30px;">About Us
                             <i class="fa-solid fa-info fa-2xl left" style="color: #00290F;"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#Contact" style="color: #00290F;">Contact
+                        <a href="#Contact" style="color: #00290F; padding-right: 30px; padding-left: 30px;">Contact
                             <i class="fa-solid fa-phone left" style="color: #00290F;"></i>
                         </a>
                     </li>
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <!-- HAMBURGER MENU BAR -->
+        <!-- PROFILE MENU BAR -->
         <a style="color: #00290F;"  data-target="mobile-demo" class="sidenav-trigger">
             <i class="fas fa-user fixed-hamburger" style="color: #00290F;"></i>
         </a>
