--- a/userHomePage.html
+++ b/userHomePage.html
@@ -31,6 +31,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="ToDoList.html" style="color: #00290F; padding-right: 30px; padding-left: 30px;">To-Do
+                            <i class="fa-solid fa-check fa-2xl left" style="color: #00290F;"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#About" style="color: #00290F; padding-right: 30px; padding-left: 30px;">About Us
                             <i class="fa-solid fa-info fa-2xl left" style="color: #00290F;"></i>
                         </a>
@@ -100,7 +105,7 @@
         <!-- WEB CALENDAR SECTION-->
         <div id="WebCalendar">
             <!-- Manage Events Tab -->
-            <br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br>
             <h1 id="calendarLabel">CALENDAR OF ACTIVITIES</h1>
             <div class="container">
                 <div id="manage-events" class="container-calendar">
