Update the admin feafult credential, fix bug

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         </div>
 
         <script src="index.js"></script>
+        <script src="adminAccountPage.js"></script>
     </body>
 </html>
