Update the files

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -21,10 +21,9 @@
     <nav class="nav-extended">
         <div class="nav-wrapper" style="background-color: #00290f">
             <img src="ImageSrc/Website-Logo-NoSymbol-White.png" width="90px" height="40px" style="margin-top: 15px; margin-left: 40px; margin-bottom: -10px;">
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down" style="margin-right: 90px;">
-                
-            </ul>
+            <a href="userHomePage.html">
+                <button>Back to Home Page</button>
+            </a>
         </div>
     </nav>
     <br><br><br><br>
