--- a/adminHomePage.html
+++ b/adminHomePage.html
@@ -13,7 +13,7 @@
         <title>𝗔𝗱𝗺𝗶𝗻 | 𝗨𝗻𝗶-𝗖𝗮𝗹𝗲𝗻𝗱𝗮𝗿</title>
     </head>
     <body>
-        <!-- Modal Structure -->
+        <!-- Modal Logout Structure -->
         <div id="logoutModal" class="modal">
             <div id="logoutModal" class="modal-content">
                 <h3>Confirm Log-out</h3>
