Create a Modal for success signed up

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <p style="font-size: 17px;">Don't have an account? <a href="Sign-up.html"><u>Sign up</u></a></p>
         </div>
 
+        <div id="custom-alert" class="custom-alert">
+            <span id="alert-message"></span>
+        </div>
+
         <script src="index.js"></script>
         <script src="adminAccountPage.js"></script>
     </body>
