--- a/Sign-up.html
+++ b/Sign-up.html
@@ -32,6 +32,9 @@
                 <input type="password" name="password" required>
                 <input type="submit" value="SIGN-UP">
             </form>
+            <div id="success-message" style="display: none; color: green;">
+                <p style="font-size: 17px; margin-top: -7px;">Successfully signed up!</p>
+            </div>
         </div>
 
         <script src="Sign-up.js"></script>
