Added the dummy default events

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 
         <script src="index.js"></script>
         <script src="adminAccountPage.js"></script>
+        <script src="adminManagePage.js"></script>
     </body>
 </html>
