--- a/userHomePage.html
+++ b/userHomePage.html
@@ -50,18 +50,16 @@
         </nav>
 
         <!-- Modal Structure -->
-        <div id="profileModal" class="modal">
+        <div id="notificationModal" class="modal">
             <div class="modal-content">
-                <h1 style="color: #00290F;">User Profile</h1>
-                <p id="profileName" style="margin-bottom: -25px;"></p>
-                <p id="profileStudentID" style="margin-bottom: -25px;"></p>
-                <p id="profileEmail"></p>
+                <div id="notificationBar">
+                    <!-- Notification content will be displayed here -->
+                </div>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
             </div>
         </div>
-
 
         <!-- PROFILE MENU BAR -->
         <a style="color: #00290F;"  data-target="mobile-demo" class="sidenav-trigger">
@@ -85,7 +83,6 @@
                 </li>
             </div>
         </ul>
-
 
         <!-- Modal Structure -->
         <div id="profileModal" class="modal">
