--- a/adminHomePage.html
+++ b/adminHomePage.html
@@ -3,6 +3,7 @@
     <head>
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="icon" href="ImageSrc/OnlyOrgLogo.png" type="image/x-icon">
         <!-- Font Awesome Icons-->
         <script src="https://kit.fontawesome.com/efef0daf69.js" crossorigin="anonymous"></script>
         <!-- Font Awesone cdn -->
