Update Htmlhomepage for Lente credits

--- a/userHomePage.html
+++ b/userHomePage.html
@@ -241,6 +241,7 @@
                             </ul>
                         </div>
                     </div>
+                    <a id="lenteCredits" href="https://www.facebook.com/pnc.lente">CC: PNC LENTE (for stock photos)</a>
                 </div>
                 <div class="footer-copyright center" style="background-color: #EDEDED;">
                     <div class="container " style="color: #033016; font-size: 20px;">
